<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/colorAccent">

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/userImageDescription"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/userEmail"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/pID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/patientID" />
</LinearLayout>