<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
 >

    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="12dp"
        android:text="@string/next"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/next"
        android:layout_marginEnd="70dp"
        android:text="@string/precedent"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="98dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:text="@string/post_meal_condition"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/next"
        android:orientation="vertical">

        <ListView
            android:id="@+id/questionsList"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:cacheColorHint="@android:color/holo_blue_dark"></ListView>
    </LinearLayout>

</RelativeLayout>