<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/Next"
        android:layout_marginEnd="76dp"
        android:text="@string/precedent"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="12dp"
        android:text="@string/next"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/announcer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Prev"
        android:layout_centerHorizontal="true"
        android:text="@string/meal_announcer"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appetite_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="250dp"
            android:text="@string/appetite"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="238dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/not_hungry_at_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_5" />

            <ImageView
                android:id="@+id/not_hungry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_4" />

            <ImageView
                android:id="@+id/i_could_eat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_3" />

            <ImageView
                android:id="@+id/hungry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_2" />

            <ImageView
                android:id="@+id/ravenous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_1" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/appetite"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="200dp"
            android:layout_marginEnd="0dp"
            android:max="4" />

        <TextView
            android:id="@+id/condition_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/appetite_txt"
            android:layout_marginBottom="156dp"
            android:text="@string/condition"
            android:textSize="20sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="101dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/not_good_at_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_5" />

            <ImageView
                android:id="@+id/not_good"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_4" />

            <ImageView
                android:id="@+id/okay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_3" />

            <ImageView
                android:id="@+id/well"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_2" />

            <ImageView
                android:id="@+id/great"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_sentiment_1" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/condition"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="0dp"
            android:max="4" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/mealsList"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:cacheColorHint="@android:color/holo_blue_dark"></ListView>
    </RelativeLayout>

</RelativeLayout>